fix: update scrollbar thumb color to improve visibility

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #80471c;
+  background: #808080;
   border-radius: 50px;
 }
